# datafusion-pinot

./: Cargo.toml  README.md
datafusion-pinot/: Cargo.toml
datafusion-pinot/examples/: benchmark.rs  benchmark_cases.rs  profile_detailed.rs  profile_query.rs  profile_raw_vs_dict.rs  query_controller.rs  query_local.rs  read_segment.rs
datafusion-pinot/src/: catalog.rs  controller.rs  error.rs  exec.rs  lib.rs  metadata_provider.rs  schema.rs  table.rs
datafusion-pinot/tests/: catalog_tests.rs  controller_client_tests.rs  query_tests.rs
pinot-segment/: Cargo.toml
pinot-segment/examples/: check_encoding.rs  segment_reader_demo.rs
pinot-segment/src/: error.rs  index_map.rs  lib.rs  metadata.rs  segment_reader.rs
pinot-segment/src/forward_index/: dictionary.rs  fixed_bit.rs  mod.rs  var_byte.rs
pinot-segment/tests/: integration_tests.rs
