[package]
name = "datafusion-pinot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
datafusion = "44.0"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
pinot-segment = { path = "../pinot-segment" }
futures = "0.3"

# Optional controller dependencies (HTTP only, no TLS)
reqwest = { version = "0.12", default-features = false, features = ["json", "http2"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
controller = ["reqwest", "serde", "serde_json"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
